# rust-real-estate-app

./: Cargo.toml  diesel.toml
src/: main.rs
src/api/: auth.rs  mod.rs  properties.rs
src/db/: connection.rs  models.rs  schema.rs
src/utils/: auth.rs
