[package]
name = "real_estate_app"
version = "0.1.0"
edition = "2021"

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-L/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/lib"]

[dependencies]
actix-web = "4"
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
argon2 = "0.3"
jsonwebtoken = "8"
actix-rt = "2"
uuid = { version = "1", features = ["v4"] }
actix-web-httpauth = "0.7"

